<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/solid_black">

    <Button
        android:id="@+id/button_law_action"
        style="@id/button_law_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_home"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="@color/White"
        android:text="@string/str_see_in_action"
        android:width="@dimen/ButtonWidth" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@color/White"
        android:text="@string/home_string" />

   <TextView
       android:id="@+id/text_view_law_desc"
       android:layout_width="400dp"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:layout_marginLeft="308dp"
       android:layout_marginTop="86dp"
       android:text="@string/blank"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/White" />

</RelativeLayout>
